--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,15 @@
 .header{
-    background-color: lightblue;
-    background-image: -o-repeating-linear-gradient();
+    background-color: rgb(0, 68, 255);
+    border-width: 0mm;
+    margin: 0%;
+    padding: 0%;
+    border-color: rgb(0, 68, 255);
+    border-style: double;
+
+}
+.imgT{
+position:bottom;
+vertical-align: bottom;
 }
 .imgH{
     margin-left:0;
