--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,33 @@
+
+*{
+    margin:0px;
+    padding:0px;
+    margin:0px;
+}
 .header{
     background-color: rgb(0, 68, 255);
-    border-width: 0mm;
-    margin: 0%;
-    padding: 0%;
+    border-width: 0px;
+    margin:0px;
+    padding:0px;
+    margin:0px;
     border-color: rgb(0, 68, 255);
     border-style: double;
 
 }
 .imgT{
-position:bottom;
-vertical-align: bottom;
+    margin:0px;
+    padding:0px;
+    margin:0px;
+    position: fixed; 
+    top: 120px; 
+    left: 10px;
+    
 }
 .imgH{
-    margin-left:0;
+    border-width: 0mm;
+    margin:0px;
+    padding:0px;
+    margin:0px;
     height:180px;    
     background-repeat: repeat-x;
 }
