--- a/styles.css
+++ b/styles.css
@@ -32,9 +32,9 @@
     background-repeat: repeat-x;
 }
 .body{
-    margin:auto;
-    border: auto;
-    padding: auto;
+    margin:10px;
+    border: 10px;
+    padding: 10px;
 
 }
 h1{
@@ -55,4 +55,8 @@ a{
 }
 .tim2{
     width: 600px;
+}
+ul{
+    margin-left: 20px;
+    text-decoration-style: double;
 }
