--- a/styles.css
+++ b/styles.css
@@ -1,62 +1,71 @@
+* {
+    margin: 0px;
+    padding: 0px;
 
-*{
-    margin:0px;
-    padding:0px;
-    margin:0px;
 }
-.header{
+
+.header {
     background-color: rgb(0, 68, 255);
     border-width: 0px;
-    margin:0px;
-    padding:0px;
-    margin:0px;
+    margin: 0px;
+    padding: 0px;
+    margin: 0px;
     border-color: rgb(0, 68, 255);
     border-style: double;
 
 }
-.imgT{
-    margin:0px;
-    padding:0px;
-    margin:0px;
-    position: absolute; 
-    top: 120px; 
+
+.imgT {
+
+    position: absolute;
+    width: 300px;
+    top: 100px;
     left: 10px;
-    
-}
-.imgH{
-    border-width: 0mm;
-    margin:0px;
-    padding:0px;
-    margin:0px;
-    height:180px;    
-    background-repeat: repeat-x;
-}
-.body{
-    margin:10px;
-    border: 10px;
-    padding: 10px;
 
 }
-h1{
+
+.imgH {
+    border-width: 0mm;
+    margin: 0px;
+    padding: 0px;
+    margin: 0px;
+    height: 180px;
+    background-repeat: repeat-x;
+}
+
+.body {
+    margin: 10px;
+    border: 10px;
+    padding: 10px;
+    margin-bottom: 20px;
+
+}
+
+h1 {
 
     text-decoration: solid;
     font-style: bold;
 }
-h5{
+
+h5 {
     color: grey;
 }
-a{
+
+a {
     color: lightblue;
     font-style: normal;
     text-decoration: none;
 }
-.tim1{
-    width:670px;
+
+.tim1 {
+    width: 670px;
 }
-.tim2{
+
+.tim2 {
     width: 570px;
 }
-ul{
+
+ul {
     margin-left: 20px;
     text-decoration-style: double;
 }
@@ -65,27 +74,58 @@ h3 {
     font-weight: 300px;
 }
 
-table tr{
+table tr {
     height: 50px;
 }
 
-table{
+table {
     column-rule-color: none;
 }
 
-.colore-blu{
+.colore-blu {
     background-color: rgb(59, 154, 236);
 }
 
-.primo{
+.primo {
     height: 20px;
     background-color: rgb(14, 14, 211);
 }
 
-table tr td:last-child{
+table tr td:last-child {
     width: 40%;
 }
 
-table, th, td {
+table,
+th,
+td {
     border-collapse: collapse;
-  }
+}
+
+.footer {
+
+    margin-left: 20px;
+    margin-bottom: 50px;
+    width: 200px;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+
+}
+
+.footer img {
+    margin: 10px 0px 10px 0;
+}
+
+.footer div {
+    position: absolute;
+    color: white;
+
+    z-index: 99;
+    top: 20px;
+    left: 10px;
+}
+
+.footer div p:last-child {
+    top: 150px;
+    position: absolute;
+}
