--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,8 @@
     border: 10px;
     padding: 10px;
     margin-bottom: 20px;
-
+    font-weight: 300px;
+    font-size: larger;
 }
 
 h1 {
@@ -70,9 +71,6 @@ ul {
     text-decoration-style: double;
 }
 
-h3 {
-    font-weight: 300px;
-}
 
 table tr {
     height: 50px;
@@ -89,6 +87,7 @@ table {
 .primo {
     height: 20px;
     background-color: rgb(14, 14, 211);
+    color: white;
 }
 
 table tr td:last-child {
